<resources>
    <string name="app_name">MovieDBShowcase</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="people">People</string>
    <string name="tab1.title" translatable="false">@string/movies</string>
    <string name="tab2.title" translatable="false">@string/tv_shows</string>
    <string name="tab3.title" translatable="false">@string/people</string>

    <string name="popularmovies.cardview.more">more…</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="visit_homepage">Visit Homepage</string>
    <string name="visit_imdb">Visit IMDB</string>
    <string name="vote_count_format">(%1$d votes)</string>
    <string name="runtime">Runtime</string>
    <string name="runtime_format">%1$d minutes</string>
    <string name="released">Released</string>
    <string name="first_aired">First Aired</string>
    <string name="transition_movie_poster">movie_poster</string>
    <string name="transition_movie_overview">movie_poster</string>
    <string name="transition_tvshow_poster">tvshow_poster</string>
    <string name="transition_tvshow_overview">tvshow_overview</string>
    <string name="overview">Overview</string>
    <string name="action_search">Search</string>

</resources>
