<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_mda_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".moviedetails.MovieDetailsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_mda_tagline"
        android:padding="8dp"
        android:textStyle="italic"
        tools:text="How much can you know about yourself if you've never been in a fight?"
        android:gravity="center_horizontal"
        android:visibility="invisible" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_mda_rating_container">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/iv_mda_rating"
            android:src="@drawable/ic_grade"
            android:tint="@color/rating"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="7.3/10"
            android:id="@+id/tv_mda_rating"
            android:transitionName="details_rating"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <TextView
            tools:text="(4,705 votes)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mda_vote_count"
            android:transitionName="details_rating"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_mda_poster"
        android:src="@mipmap/poster_placeholder"
        android:transitionName="popular_movie"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Overview"
        android:id="@+id/tv_mda_overview_title"
        android:paddingLeft="4dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_mda_overview"
        android:padding="8dp"
        android:transitionName="details_overview"
        tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground &apos;fight clubs&apos; forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion."/>

    <View
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="1dp"
        android:id="@+id/vs_mda_above_runtime"
        android:background="#919191" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_mda_released_container"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/released"
            android:id="@+id/tv_mda_released_title"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            tools:text="12/08/2016"
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tv_mda_released_value"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_mda_runtime_container"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/runtime"
            android:id="@+id/tv_mda_runtime_title"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tv_mda_runtime_value"
            android:layout_marginLeft="8dp"
            tools:text="120 minutes"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="1dp"
        android:id="@+id/vs_mda_above_budget"
        android:background="#919191" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_mda_budget_container"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/budget"
            android:id="@+id/tv_mda_budget_title"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tv_mda_budget_value"
            android:layout_marginLeft="8dp"
            tools:text="$150,000,000"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_mda_revenue_container"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/revenue"
            android:id="@+id/tv_mda_revenue_title"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            tools:text="$300,000,000"
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tv_mda_revenue_value"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="1dp"
        android:id="@+id/vs_mda_below_revenue"
        android:background="#919191" />

    <Button
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit_homepage"
        android:id="@+id/btn_mda_homepage"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="gone" />
    <Button
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit_imdb"
        android:id="@+id/btn_mda_imdb"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="gone" />

</LinearLayout>